fixed alignment issues with navbar.

--- a/assets/css/auxilary.css
+++ b/assets/css/auxilary.css
@@ -95,8 +95,11 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper {
     margin-left: auto;
     margin-right: auto;
-    min-width: 900px;
     margin-top: 10px;
+}
+
+.container{
+    min-width: 960px;
 }
 
 .welcome-message {
@@ -173,6 +176,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 svg {
-    text-algin: center
+    text-align: center;
 }
 
